--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical">
 
   <!-- Incluir el header reutilizable -->
-  <include layout="@layout/activity_header" />
+  <include layout="@layout/activity_header2" />
 
 
   <TextView
@@ -19,10 +19,10 @@
       android:gravity="center"
       android:elevation="20dp"
       android:background="@drawable/pagactual_drawable"
-      android:layout_height="73dp"
+      android:layout_height="60dp"
       android:text="@string/text_info_proceso"
       android:textAlignment="center"
-      android:textSize="25sp"
+      android:textSize="22sp"
       android:textColor="#005B14"
       android:textStyle="bold" />
 
@@ -36,9 +36,9 @@
       android:textAlignment="center"
       android:textSize="25sp"
       android:layout_width="match_parent"
-      android:layout_height="132dp"
+      android:layout_height="115dp"
       android:layout_gravity="center"
-      android:layout_marginTop="25dp"
+      android:layout_marginTop="20dp"
       android:layout_marginEnd="15dp"
       android:layout_marginStart="15dp"
       android:elevation="12dp"
@@ -50,12 +50,12 @@
       android:layout_width="match_parent"
       android:layout_gravity="center"
       android:gravity="center"
-      android:layout_marginTop="25dp"
+      android:layout_marginTop="20dp"
       android:layout_marginEnd="15dp"
       android:layout_marginStart="15dp"
       android:elevation="12dp"
       android:background="@drawable/body_drawable"
-      android:layout_height="132dp"
+      android:layout_height="115dp"
       android:text="@string/text_proctologia"
       android:textAlignment="center"
       android:textSize="25sp"
@@ -67,12 +67,12 @@
       android:layout_width="match_parent"
       android:layout_gravity="center"
       android:gravity="center"
-      android:layout_marginTop="25dp"
+      android:layout_marginTop="20dp"
       android:layout_marginEnd="15dp"
       android:layout_marginStart="15dp"
       android:elevation="12dp"
       android:background="@drawable/body_drawable"
-      android:layout_height="132dp"
+      android:layout_height="115dp"
       android:text="@string/text_suelo"
       android:textAlignment="center"
       android:textSize="25sp"
