--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,9 +21,9 @@
             android:textAlignment="center"
             android:textSize="25sp"
             android:layout_width="match_parent"
-            android:layout_height="132dp"
+            android:layout_height="115dp"
             android:layout_gravity="center"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="15dp"
             android:layout_marginStart="15dp"
             android:elevation="12dp"
@@ -37,15 +37,17 @@
             android:layout_width="match_parent"
             android:layout_gravity="center"
             android:gravity="center"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="15dp"
             android:layout_marginStart="15dp"
             android:elevation="12dp"
             android:background="@drawable/body_drawable"
-            android:layout_height="132dp"
+            android:layout_height="115dp"
             android:text="@string/text_preoperatorio"
             android:textAlignment="center"
             android:textSize="25sp"
+            android:clickable="true"
+            android:onClick="openPreoperatorioActivity"
             android:textStyle="bold" />
 
 
@@ -54,12 +56,12 @@
         android:layout_width="match_parent"
         android:layout_gravity="center"
         android:gravity="center"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="15dp"
         android:layout_marginStart="15dp"
         android:elevation="12dp"
         android:background="@drawable/body_drawable"
-        android:layout_height="132dp"
+        android:layout_height="115dp"
         android:text="@string/text_postoperatorio"
         android:textAlignment="center"
         android:textSize="25sp"
